# SpectroGAN

./: .gitignore  README.md  pyproject.toml
acte/: settings.py
acte/transmogrifier/: data_utils.py  generator.py  model.py  settings.py  test_model.py  train_model.py
acte/util/: audio.py  files.py  logging.py  visualize_data.py
